# discoveryf4-std-periph

./: .gitattributes  .gitignore  CMakeLists.txt  README.org  index.html  index.org  toolchain.cmake
